2010-01-15 13:47  paddockd

	* [r121] ChangeLog, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_decoder.c,
	  src/slimaudio/slimaudio_decoder_flac.c,
	  src/slimaudio/slimaudio_decoder_mad.c,
	  src/slimaudio/slimaudio_decoder_pcm.c,
	  src/slimaudio/slimaudio_decoder_vorbis.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c: Moved
	  recoverable decoder error messages to slimaudio_decoder_r debug
	  option.
	  Added squeezebox server --port/-P option.
	  Removed obsolete --playerid/-e option.
	  Increased version to 121.

2010-01-10 21:50  paddockd

	* [r120] ChangeLog, makefile.mingw32-asio,
	  makefile.mingw32-display, src/slimaudio/slimaudio.c,
	  src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_decoder_flac.c,
	  src/slimaudio/slimaudio_decoder_mad.c,
	  src/slimaudio/slimaudio_decoder_vorbis.c,
	  src/slimproto/slimproto.c, src/squeezeslave/squeezeslave.c: Fixed
	  OV_CALLBACKS not defined warnings.
	  Increased slimproto.c recv timeout to 30 seconds since
	  disconnects are still happening once in a while.
	  Fixed MONO stream playback for WAV, MP3 and FLAC which I broke at
	  r56. OGG still has "chipmunk" effect as there's no easy way to
	  determine the stream is only 1 channel in
	  slimaudio_decoder_vorbis.c
	  Added STOP acknowledgement via STMf status notification to
	  strm.q.
	  Added INTERACTIVE support to win32 asio makefile.
	  Increased version to 120.

2010-01-03 22:22  paddockd

	* [r119] ChangeLog, TODO, makefile.linux24-alsa,
	  makefile.linux24-alsa-display, makefile.linux26-alsa,
	  makefile.linux26-alsa-display, makefile.linux26-i64-alsa,
	  makefile.linux26-i64-alsa-display, makefile.linux26-ppc-alsa,
	  makefile.linux26-ppc-alsa-display, makefile.mingw32,
	  makefile.mingw32-asio, makefile.mingw32-display,
	  makefile.mingw32-padev, sources, src/slimaudio/slimaudio_http.c,
	  src/slimproto/slimproto.c, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c, wiki/SqueezeSlave.wiki: Initial