@@ -1,3 +1,15 @@
+2010-01-21 18:59  paddockd
+
+	* [r122] ChangeLog, lib/lirc/s9sparc, lib/lirc/s9sparc/build,
+	  lib/lirc/s9sparc/include, lib/lirc/s9sparc/include/lirc,
+	  lib/lirc/s9sparc/lib, makefile.mingw32-asio,
+	  makefile.mingw32-display, makefile.netbsd,
+	  makefile.s9sparc-display, src/squeezeslave/squeezeslave.c: Added
+	  makefile.netbsd, thanks to Jean-Yves Moulin.
+	  Added makefile.s9sparc-display.
+	  Fixed hard coded gcc reference in win32 makefiles.
+	  Increased version to 122.
+
 2010-01-15 13:47  paddockd
 
 	* [r121] ChangeLog, src/slimaudio/slimaudio.h,
